Project

General

Profile

Actions

Bug #55799

closed

rgw:The error reported in the "rgw_s3_prepare_decrypt" function is unreasonable

Added by wang kevin almost 2 years ago. Updated over 1 year ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

100%

Source:
Tags:
sse
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

When decrypting the data encrypted with the "SSE-KMS" method, the "InvalidAccessKeyId" error is reported when the KMS key is unavailable, which is unreasonable. Therefore, we added the "InvalidKmsKeyId" error code to correct this problem.

Actions #2

Updated by Casey Bodley almost 2 years ago

  • Status changed from New to Fix Under Review
  • Tags set to sse
  • Pull request ID set to 46443
Actions #3

Updated by Casey Bodley over 1 year ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF